--- a/css/custom.styles.css
+++ b/css/custom.styles.css
@@ -1,30 +1,33 @@
-
 /* Svg icons*/
-.bi{
-    padding:5px;
+
+
+.bi {
+	padding: 5px;
 }
 
-.images-top{
-    padding-left: 2em;
+.images-top {
+	padding-left: 2em;
 }
 
-#marketing
-{
-    margin-top: 3em;
-    margin-bottom: 2em;
-    min-height: 300px;
-    background-color: #f1f1f1;
-    /* background-image: linear-gradient(to top, #13547a 0%, #80d0c7 100%); */ 
+#marketing {
+	margin-top: 3em;
+	margin-bottom: 2em;
+	min-height: 300px;
+	background-color: #f1f1f1;
+/* background-image: linear-gradient(to top, #13547a 0%, #80d0c7 100%); */
+
 }
 
-#marketing-area h2{
-text-align: center;
-padding-top: 1em;
-margin: 1em;
-color: #665050
+#marketing-area h2 {
+	text-align: center;
+	padding-top: 1em;
+	margin: 1em;
+	color: #665050
 }
+
 .accordion {
-	max-width: 800px; max-height: 320px;
+	max-width: 800px;
+	max-height: 320px;
 	overflow: hidden;
 	margin: 2em auto;
 	box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.35);
@@ -44,8 +47,14 @@ color: #665050
 	transition: all 0.5s;
 }
 
-.accordion ul:hover li {width: 40px;}
-.accordion ul li:hover {width: 640px;}
+.accordion ul:hover li {
+	width: 40px;
+}
+
+.accordion ul li:hover {
+	width: 640px;
+}
+
 .accordion li img {
 	display: block;
 }
@@ -53,88 +62,85 @@ color: #665050
 .image_title {
 	background: rgba(0, 0, 0, 0.5);
 	position: absolute;
-	left: 0; bottom: 10px;	
-  width: 640px;	
-
+	left: 0;
+	bottom: 10px;
+	width: 640px;
 }
+
 .image_title a {
 	display: block;
-  text-align: center; 
+	text-align: center;
 	color: #fff;
 	text-decoration: none;
 	padding: 20px;
 }
 
 @keyframes BobbySnuggles {
-  0% {
-    opacity: 0;
-    transform: rotate(15deg) scale(0);
-  }
-  100% {
-    opacity: 1; 
-    transform: rotate(0deg) scale(1);
-  }
+	0% {
+		opacity: 0;
+		transform: rotate(15deg) scale(0);
+	}
+
+	100% {
+		opacity: 1;
+		transform: rotate(0deg) scale(1);
+	}
 }
 
 @media screen and (max-width: 500px) {
-  nav {
-    background: pink; 
-  }
+	nav {
+		background: pink;
+	}
 }
 
-#content{
-  
-    padding-top: 2em;
-    padding-bottom: 2em;
-    padding-right: 0;
-    
-}
-#main-content{
-    padding: 2em 1em;
-    background-color: #f1f1f1;
-}
-#main-content-articles{
-    overflow-y: scroll;
-    
-    
+#content {
+	padding-top: 2em;
+	padding-bottom: 2em;
+	padding-right: 0;
 }
 
-#main-content-articles article{
-    max-height: 400px;
-    
-    padding: 1em;
+#main-content {
+	padding: 2em 1em;
+	background-color: #f1f1f1;
 }
 
-#sidebar-menu{
-    background-color: #dddddd;
-    padding: 1.5em;
+#main-content-articles {
+	overflow-y: scroll;
+}
+
+#main-content-articles article {
+	max-height: 400px;
+	padding: 1em;
+}
+
+#sidebar-menu {
+	background-color: #dddddd;
+	padding: 1.5em;
 }
 
 #sub-article-left h4,
-#sub-article-right h3{
-    padding-top: 1em;
-   
+#sub-article-right h3 {
+	padding-top: 1em;
 }
 
-#contacts-section
-{
-    min-height: 300px;
+#contacts-section {
+	min-height: 300px;
 }
 
-#contacts{
-    margin: 1em;
-    padding:1em;
+#contacts {
+	margin: 1em;
+	padding: 1em;
 }
 
-.form-group{
-     padding-bottom:1em;
+.form-group {
+	padding-bottom: 1em;
 }
 
-.form-check{
-    padding-bottom: 1em;
+.form-check {
+	padding-bottom: 1em;
 }
 
-#form-left-slider{
-    padding-left: 1.5em;
-    margin-left: 20px;
+#form-left-slider {
+	padding-left: 1.5em;
+	margin-left: 20px;
 }
